2019-11-14  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386-options.c (ix86_omp_device_kind_arch_isa): Don't
	change sse4.2 to sse4_2 and sse4.1 to sse4.1.
	* config/i386/t-omp-device (omp-device-properties-i386): Likewise.

	* omp-general.c (omp_context_name_list_prop): New function.
	(omp_context_selector_matches): Use it.  Return 0 if it returns
	NULL.
	(omp_context_selector_props_compare): Allow equivalency of an
	identifier and a string literal containing no embedded zeros.

2019-11-14  Aldy Hernandez  <aldyh@redhat.com>

	* range-op.cc (RANGE3): Remove.
	(range_tests): Remove all selftest that check for multi-ranges.
	Put tests in namespace selftest.
	* selftest.h: Move range_tests into namespace selftest.
	* value-range.h (class value_range): Unfriend range_tests.

2019-11-14  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (range_fold_binary_symbolics_p): Adapt for
	normalize_symbolics and normalize_addresses working in place.
	(range_fold_unary_symbolics_p): Same.
	(range_fold_unary_symbolics_p): Same.
	* value-range.cc (num_pairs): Same.
	(lower_bound): Same.
	(upper_bound): Same.
	(contains_p): Same.
	(normalize_addresses): Same.
	(normalize_symbolics): Same.
	* value-range.h (normalize_symbolics): Same.
	(normalize_addresses): Same.

2019-11-14  Feng Xue  <fxue@os.amperecomputing.com>

	PR ipa/91682
	* ipa-prop.h (jump_func_type): New value IPA_JF_LOAD_AGG.
	(ipa_load_agg_data, ipa_agg_value, ipa_agg_value_set): New structs.
	(ipa_agg_jf_item): Add new field jftype and type, redefine field value.
	(ipa_agg_jump_function): Remove member function equal_to.
	(ipa_agg_jump_function_p): Remove typedef.
	(ipa_copy_agg_values, ipa_release_agg_values): New functions.
	* ipa-prop.c (ipa_print_node_jump_functions_for_edge): Dump
	information for aggregate jump function.
	(get_ssa_def_if_simple_copy): Add new parameter rhs_stmt to
	record last definition statement.
	(load_from_unmodified_param_or_agg): New function.