@@ -1,3 +1,9 @@
+2019-11-14  Martin Liska  <mliska@suse.cz>
+
+	* ipa-icf-gimple.c (func_checker::compare_gimple_call): Update
+	bail out reason.
+	(func_checker::compare_gimple_assign): Likewise.
+
 2019-11-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386-options.c (ix86_omp_device_kind_arch_isa): Don't
